@@ -1,3 +1,7 @@
+2003-01-21  Werner Koch  <wk@gnupg.org>
+
+	* gcrypt.h (gcry_random_add_bytes): Add QUALITY argument.
+
 2003-01-21  Timo Schulz  <twoaday@freakmail.de>
 
 	* gcrypt.h (gcry_random_add_bytes): New.
